Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/declaration/method/MethodVoidParameter.out
MethodVoidParameter.java:7:17: compiler.err.void.not.allowed.here
MethodVoidParameter.java:8:17: compiler.err.void.not.allowed.here
2 errors
